Functional Contact Button

--- a/ccc/index.html
+++ b/ccc/index.html
@@ -52,7 +52,7 @@
                         centrate en lo que realmente importa "LA INSPECCION".<div> <a class="btn-get-started scrollto"
                                 href="#about">Conocenos </a></div>
                         <div>
-                            <p> </p><a class="btn btn-outline-primary btn-lg btn-block" href="/login">Comienza
+                            <p> </p><a class="btn btn-outline-primary btn-lg btn-block" href="https://sergiotenza.github.io/">Comienza
                                 Gratis</a>
                         </div>
                     </h2>
