--- a/contact.html
+++ b/contact.html
@@ -57,23 +57,15 @@
                               <label for="name">
                                   Nombre</label>
                               <input type="text" class="form-control" id="name" placeholder="tu nombre" required="required" />
-                          </div>
-                          <div class="form-group">
-                              <label for="email">
-                                  Email</label>
-                              <div class="input-group">
-                                  <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
-                                  </span>
-                                  <input type="email" class="form-control" id="email" placeholder="tu email" required="required" /></div>
-                          </div>
+                          </div>                          
                           <div class="form-group">
                               <label for="subject">
                                   Asunto</label>
                               <select id="subject" name="subject" class="form-control" required="required">
                                   <option value="na" selected="">Elige uno:</option>
-                                  <option value="service">Oferta de trabajo</option>
-                                  <option value="suggestions">Propuesta de proyecto</option>
-                                  <option value="product">Solicitar mas info</option>
+                                  <option value="Oferta de trabajo">Oferta de trabajo</option>
+                                  <option value="Propuesta de proyecto">Propuesta de proyecto</option>
+                                  <option value="mas info">Solicitar mas info</option>
                               </select>
                           </div>
                       </div>
@@ -86,8 +78,9 @@
                           </div>
                       </div>
                       <div class="col-md-12">
-                          <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">
-                              Enviar mensaje</button>
+                            <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">
+                                Enviar
+                            </button>
                       </div>
                   </div>
                   </form>
@@ -106,7 +99,7 @@
               </address>
               <address>
                   <strong>Sergio Tenza</strong><br>
-                  <a href="mailto:#">tnzservicios@gmail.com</a>
+                  <a href="mailto:tnzservicios@gmail.com">TNZ Servicios Informaticos</a>                  
               </address>
               </form>
           </div>
@@ -131,5 +124,17 @@
          src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">         
     </script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script>
+        $(function () {
+            $('#btnContactUs').on('click', function (event) {
+                event.preventDefault();                
+                var email = 'tnzservicios@gmail.com';
+                var subject = $('select#subject').val();
+                var emailBody = $('textarea#message').val();
+                window.location = 'mailto:' + email + '?subject=' + subject + '&body=' +   emailBody;               
+            });
+        });
+    </script>
+    
 </body>
 </html>
