--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     <header>
         <div class="container bg-light text-center">
             <h1 class="mt-4">Bienvenido a mi portafolio online <br> Wellcome to my online portfolio</h1>
-        </div>
-        
+        </div>         
     </header>
     <main>
         <div class="container">
@@ -48,6 +47,7 @@
                     <ul class="list-group">
                         <li class="list-group-item d-flex justify-content-between align-items-center">WebApp para control de calidad en calzado basado en la norma 2859-1<a href="/ccc/index.html">   Pulsa aqui</a></li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">Concept para Social Network<a href="/socialconcept/index.html">   Pulsa aqui</a></li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">Practica Newspaper western<a href="/practicas/western/index.html">   Pulsa aqui</a></li>
                     </ul>
                 </div>
             </div>
