--- a/BlazorTest/index.html
+++ b/BlazorTest/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>BlazorTest</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="BlazorTest.styles.css" rel="stylesheet" />
-</head>
+    <link
+      href="https://sergiotenza.github.io/BlazorTest/css/bootstrap/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://sergiotenza.github.io/BlazorTest/css/app.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://sergiotenza.github.io/BlazorTest/BlazorTest.styles.css"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
+      An unhandled error has occurred.
+      <a href="" class="reload">Reload</a>
+      <a class="dismiss">🗙</a>
     </div>
-    <script src="_framework/blazor.webassembly.js"></script>
-</body>
-
+    <script src="https://sergiotenza.github.io/BlazorTest/_framework/blazor.webassembly.js"></script>
+  </body>
 </html>
