--- a/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/wwwroot/index.html
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Blazor.Wasm/wwwroot/index.html
@@ -4,10 +4,22 @@
 <head>
     <meta charset="utf-8" />
     <base href="/" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="css/app.css" rel="stylesheet" />
+
 </head>
 
-<body>
+<body class="">
+    <nav class="navbar bg-primary mb-5">
+        <div class="container-fluid">
+            <a class="navbar-brand text-light" href="/">
+                <img src="assets/logo_transparent.png" alt="Logo" width="50" height="50"
+                    class="d-inline-block align-text-top">
+                TNZ Servicios Informaticos
+            </a>
+        </div>
+    </nav>
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
@@ -15,6 +27,9 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
