--- a/SergioTenza.Blazor.Wasm/SergioTenza.Wasm/wwwroot/index.html
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Wasm/wwwroot/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SergioTenza.Wasm</title>
+    <meta name="description" content="TNZ Servicios Informaticos - Consultoría y Formación Especializada en Blazor y Dotnet" />
+    <title>TNZ Servicios Informaticos</title>
     <base href="/" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="SergioTenza.Wasm.styles.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --primary-color: #512BD4;
+            --secondary-color: #6A1B9A;
+            --accent-color: #FFEB3B;
+            --text-color: #333333;
+            --light-bg: #f9f9f9;
+        }
+
+        body {
+            font-family: 'Roboto', sans-serif;
+            color: var(--text-color);
+            line-height: 1.6;
+            overflow-x: hidden;
+        }
+
+        h1, h2, h3, h4, h5, h6 {
+            font-weight: 700;
+        }
+
+        a {
+            color: var(--primary-color);
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: var(--secondary-color);
+        }
+
+        button {
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
