--- a/SergioTenza.Blazor.Wasm/SergioTenza.Wasm/wwwroot/index.html
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Wasm/wwwroot/index.html
@@ -9,7 +9,7 @@
     <base href="/" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link href="SergioTenza.Wasm.styles.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
